WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
227499
REGRESSION(
r279250
): Sometimes causes YouTube audio to cut out
https://bugs.webkit.org/show_bug.cgi?id=227499
Summary
REGRESSION(r279250): Sometimes causes YouTube audio to cut out
WebKit Commit Bot
Reported
2021-06-29 13:18:26 PDT
https://commits.webkit.org/r279250
introduced a regression: Sometimes causes YouTube audio to cut out This is an automatic bug report generated by webkitbot. If this bug report was created because of a flaky test, please file a bug for the flaky test (if we don't already have one on file) and dup this bug against that bug so that we can track how often these flaky tests fail.
Attachments
REVERT of r279250
(26.75 KB, patch)
2021-06-29 13:18 PDT
,
WebKit Commit Bot
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
WebKit Commit Bot
Comment 1
2021-06-29 13:18:31 PDT
Created
attachment 432514
[details]
REVERT of
r279250
Any committer can land this patch automatically by marking it commit-queue+. The commit-queue will build and test the patch before landing to ensure that the revert will be successful. This process takes approximately 15 minutes. If you would like to land the revert faster, you can use the following command: webkit-patch land-attachment ATTACHMENT_ID where ATTACHMENT_ID is the ID of this attachment.
EWS
Comment 2
2021-06-29 13:21:10 PDT
Committed
r279382
(
239247@main
): <
https://commits.webkit.org/239247@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 432514
[details]
.
Radar WebKit Bug Importer
Comment 3
2021-06-29 13:22:23 PDT
<
rdar://problem/79930903
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug