Cherry-pick r279382. rdar://problem/79970297

Unreviewed, reverting r279250.
    https://bugs.webkit.org/show_bug.cgi?id=227499

    Sometimes causes YouTube audio to cut out

    Reverted changeset:

    "[Cocoa] Last few seconds of 'audio/webm; codecs=vorbis'
    appended to a SampleBuffer are not played"
    https://bugs.webkit.org/show_bug.cgi?id=226069
    https://commits.webkit.org/r279250

    Canonical link: https://commits.webkit.org/239247@main
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@279382 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/239204.5@safari-612.1.21-branch
git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-612.1.21-branch@279417 268f45cc-cd09-0410-ab3c-d52691b4dbfc